@@ -19,6 +19,8 @@ class ReaderContextTest(unittest.TestCase):
             self.assertEqual(s.crs['proj'], 'utm')
             self.assertEqual(s.crs['zone'], 18)
             self.assert_(s.crs_wkt.startswith('PROJCS'), s.crs_wkt)
+            for i, v in enumerate((101985.0, 2611485.0, 339315.0, 2826915.0)):
+                self.assertAlmostEqual(s.bounds[i], v)
             self.assertEqual(
                 s.transform, 
                 [101985.0, 300.0379266750948, 0.0, 
@@ -36,7 +38,6 @@ class ReaderContextTest(unittest.TestCase):
         self.assertEqual(s.dtypes, [rasterio.ubyte]*3)
         self.assertEqual(s.crs['proj'], 'utm')
         self.assertEqual(s.crs['zone'], 18)
-        self.assert_(s.crs_wkt.startswith('PROJCS'), s.crs_wkt)
         self.assertEqual(
             s.transform, 
             [101985.0, 300.0379266750948, 0.0, 
@@ -45,6 +46,13 @@ class ReaderContextTest(unittest.TestCase):
             repr(s),
             "<closed RasterReader 'rasterio/tests/data/RGB.byte.tif' "
             "at %s>" % hex(id(s)))
+    def test_derived_spatial(self):
+        with rasterio.open('rasterio/tests/data/RGB.byte.tif') as s:
+            self.assert_(s.crs_wkt.startswith('PROJCS'), s.crs_wkt)
+            for i, v in enumerate((101985.0, 2611485.0, 339315.0, 2826915.0)):
+                self.assertAlmostEqual(s.bounds[i], v)
+            for a, b in zip(s.ul(0, 0), (101985.0, 2826915.0)):
+                self.assertAlmostEqual(a, b)
     def test_read_ubyte(self):
         with rasterio.open('rasterio/tests/data/RGB.byte.tif') as s:
             a = s.read_band(1)
