@@ -5,6 +5,7 @@ Next
 ----
 - Drop six dependency (#9)
 - Add crs_wkt attribute (#10).
+- Add bounds attribute and ul() method (#11).
 
 0.2 (2013-11-24)
 ----------------
